codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__referral_invite_email_prompt.snap
---
source: tui/src/chatwidget/tests/referrals.rs
expression: "render_bottom_popup(&chat, 80)"
---
▌ Invite someone to Codex
▌ Enter one email address, then press Enter.
▌
▌ name@example.com

Press enter to confirm or esc to go back
