codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__referral_invite_rewardless_success.snap
---
source: tui/src/chatwidget/tests/referrals.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Invite someone to Codex
  Invite sent to friend@example.com, but this invite did not include a reward.

› 1. Close

  Press enter to confirm or esc to go back
