codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__referral_invite_sending.snap
---
source: tui/src/chatwidget/tests/referrals.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Invite someone to Codex
  Sending an invite to friend@example.com...

›    Sending invite...
